# SimpleHTTP

./: BUILD.bazel  MODULE.bazel  README.md  e2e-tests.yml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.bcr/patches/: add_workspace_file.patch
.github/workflows/: create-release.yml  e2e-tests.yml
example/: BUILD.bazel  serve.cpp  serve_tcp.cpp  serve_unix.cpp
simplehttp/: simplehttp.hpp
src/: BUILD.bazel  simplehttp.hpp
test/: .gitignore  BUILD.bazel  MODULE.bazel  basic_http_tcp.cpp  basic_http_unix.cpp  drain_chunked_body_test.cpp  drain_fixed_body_test.cpp  process_chunked_body_test.cpp  process_fixed_body_test.cpp  start_test_server.cpp  test.cpp  verify_headers_test.cpp  verify_query_params_test.cpp
