cc_binary(
    name = "serve_tcp",
    srcs = glob(["serve_tcp.cpp"]),
    copts = ["-std=c++23"],
    deps = ["//:simplehttp"],
    visibility = ["//visibility:private"],
)

cc_binary(
    name = "serve_unix",
    srcs = glob(["serve_unix.cpp"]),
    copts = ["-std=c++23"],
    deps = ["//:simplehttp"],
    visibility = ["//visibility:private"],
)
