cc_test(
    name = "verify_query_params",
    srcs = glob(["verify_query_params_test.cpp"]),
    copts = ["-std=c++20"],
    tags = ["requires-network"],
    size = "small",
    deps = ["@curl//:curl", "@simplehttp//:simplehttp"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "verify_headers",
    srcs = glob(["verify_headers_test.cpp"]),
    copts = ["-std=c++20"],
    tags = ["requires-network"],
    size = "small",
    deps = ["@curl//:curl", "@simplehttp//:simplehttp"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "process_fixed_body",
    srcs = glob(["process_fixed_body_test.cpp"]),
    copts = ["-std=c++20"],
    tags = ["requires-network"],
    size = "small",
    deps = ["@curl//:curl", "@simplehttp//:simplehttp"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "drain_fixed_body",
    srcs = glob(["drain_fixed_body_test.cpp"]),
    copts = ["-std=c++20"],
    tags = ["requires-network"],
    size = "small",
    deps = ["@curl//:curl", "@simplehttp//:simplehttp"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "process_chunked_body",
    srcs = glob(["process_chunked_body_test.cpp"]),
    copts = ["-std=c++20"],
    tags = ["requires-network"],
    size = "small",
    deps = ["@curl//:curl", "@simplehttp//:simplehttp"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "drain_chunked_body",
    srcs = glob(["drain_chunked_body_test.cpp"]),
    copts = ["-std=c++20"],
    tags = ["requires-network"],
    size = "small",
    deps = ["@curl//:curl", "@simplehttp//:simplehttp"],
    visibility = ["//visibility:private"],
)
